Add whitespace validation to RewriteTest